--- a/index.html
+++ b/index.html
@@ -23,21 +23,13 @@
 				+ (event.accelerationIncludingGravity.z/9.81).toFixed(4));
 		}
 
-		function orientation(event){
-			console.log('orientation',event);
-			// BLAH
-			S("#magnetometer").html("Magnetometer: "
-				+ event.alpha + ", "
-				+ event.beta + ", "
-				+ event.gamma);
-		}
 
 		if(window.DeviceMotionEvent){
 			window.addEventListener("devicemotion", motion, false);
 			S('#status').html(S('#status').html().replace("is not supported", "is supported"));
 		}
 		if(window.DeviceOrientationEvent){
-			window.addEventListener("deviceorientation", orientation, false);
+			window.addEventListener("deviceorientation", space.orientation, false);
 			S('#status').html(S('#status').html().replace("is not supported", "is supported"));
 		}
 		space = new ThreeDSound();
@@ -67,22 +59,22 @@
 
 		this.sounds = new Array();
 		this.sounds.push(new SoundSource('seldomsirius.ogg',this.audioCtx,S('.panner-data'),[
-			{x:this.x,y:this.y-1,z:this.z-10,t:0},
-			{x:this.x,y:this.y-1,z:this.z-1,t:5},
-			{x:this.x-20,y:this.y-1,z:this.z-1,t:10},
+			{x:this.x,y:this.y-1,z:this.z,t:0},
+			{x:this.x,y:this.y-1,z:this.z,t:5},
+			{x:this.x-20,y:this.y-10,z:this.z,t:10},
 			{x:this.x+10,y:this.y-1,z:this.z-3,t:15},
-			{x:this.x,y:this.y-1,z:this.z-1,t:20}
+			{x:this.x,y:this.y-1,z:this.z,t:20}
 		]));
 		this.sounds.push(new SoundSource('seldomsirius.ogg',this.audioCtx,S('.panner-data2'),[
-			{x:this.x-20,y:this.y-1,z:this.z-10,t:0},
-			{x:this.x+20,y:this.y-1,z:this.z-20,t:10}
+			{x:this.x-20,y:this.y-1,z:this.z,t:0},
+			{x:this.x+20,y:this.y-1,z:this.z,t:10}
 		]));
 
 
 		var listener = this.audioCtx.listener;
 		listener.dopplerFactor = 1;
 		listener.speedOfSound = 343.3;
-		listener.setOrientation(0,0,-1,0,1,0);
+		listener.setOrientation(0,-1,0,0,0,1);
 		// Note that the above three features have been deprecated
 		// in recent versions of the spec (mid April 2015 onwards)
 
@@ -99,6 +91,24 @@
 
 		return this;
 	}
+	ThreeDSound.prototype.orientation = function(event){
+		console.log('orientation',event);
+		// BLAH
+		if(this.playing){
+			var a = Math.PI*event.alpha/180;
+			var b = Math.PI*event.beta/180;
+			var g = Math.PI*event.beta/180;
+			theta = Math.atan2((-Math.cos(a)*Math.sin(g) - Math.sin(a)*Math.sin(b)*Math.cos(g)),(-Math.sin(a)*Math.sin(g) + Math.cos(a)*Math.sin(b)*Math.cos(g)))
+			
+			S("#magnetometer").html("Magnetometer: " + event.alpha.toFixed(2) + ", " + event.beta.toFixed(2) + ", " + event.gamma.toFixed(2)+', '+theta.toFixed(2));
+//			if(!this.theta_i) this.theta_i = this.theta;
+//			if(!this.phi_i) this.phi_i = phi.theta;
+//			x = Math.cos(this.theta - this.theta_i);
+//			y = Math.sin(this.theta - this.theta_i);
+//			z = Math.cos
+		}
+		return this;
+	}
 	ThreeDSound.prototype.play = function(){
 		var _obj = this;
 
@@ -112,6 +122,8 @@
 		this.playing = true;
 		this.start = new Date();
 		this.i = 0;
+		this.theta_i = null;
+		this.phi_i = null;
 		frame();
 		this.getData();
 		for(var i = 0; i < this.sources.length; i++) this.sources[i].start(0);
