Show compass angle

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 
 			this.angle(theta);
 //			S("#magnetometer").html("Magnetometer: " + event.alpha + ", " + event.beta + ", " + event.gamma + ", " + theta*180/Math.PI);
+			S("#magnetometer").html("Magnetometer: " + (theta*180/Math.PI));
 		}
 		return this;
 	}
