Remove auto rotate

--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
 	}
 	ThreeDSound.prototype.setTime = function(t){
 		for(var i = 0; i < this.sounds.length; i++) this.sounds[i].setTime(t);
-		theta = 360*t/10;
-		this.angle(theta);
+		//theta = 360*t/10;
+		//this.angle(theta);
 	}
 
 	function SoundSource(src,ctx,el,path){
